# Rust_PostgreSQL

./: Cargo.toml  DatosPrueba1_asd.csv  DatosPrueba2_dataJan-16-2021.csv  DatosPrueba3_MOCK_DATA.csv  DatosPrueba3_MOCK_DATA5K.csv  DatosPrueba4_MOCK_DATA10K.csv  DatosPrueba4_MOCK_DATA5K.csv
src/: main.rs
