[package]
name = "rust-migracion"
version = "0.1.0"
authors = ["Sebas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
csv = "1.1.5"
postgres = "0.15"
native-tls = "0.2.7"
tokio-postgres-native-tls = "0.1.0-rc.1"
serde = { version = "1", features = ["derive"] }
is-even = "1.0.0"
unidecode = "0.3.0"
unicode-normalization = "0.1.16"
chrono = "0.4.19"